# quikia

./: Cargo.toml  README.md
example/src/: main.rs
quikia/: Cargo.toml
quikia/macros/: Cargo.toml
quikia/macros/src/: lib.rs
quikia/material_color_utilities/src/: temperature_cache.rs
quikia/material_color_utilities/src/dynamic_color/: mod.rs
quikia/material_color_utilities/src/hct/: cam.rs  viewing_conditions.rs
quikia/material_color_utilities/src/scheme/: scheme_expressive.rs
quikia/material_color_utilities/src/utils/: utils.rs
quikia/src/: lib.rs
quikia/src/anim/: animation.rs
quikia/src/animation/: animation.rs
quikia/src/app/: app.rs  desktop_impl.rs  mod.rs  page.rs  theme.rs  window.rs
quikia/src/component/: button.rs  mod.rs
quikia/src/item/: dispatch_event.rs  image.rs  item.rs  item_event.rs  logical_x.rs  mod.rs  rectangle.rs  ripple.rs  row.rs  scroller.rs  stack.rs  text_block.rs
quikia/src/item/additional_property/: baseline.rs  shadow.rs
quikia/src/layout/: axis_layout.rs  flex_layout.rs  mod.rs  stack.rs
quikia/src/property/: alignment_property.rs  bool_property.rs  color_property.rs  float_property.rs  gravity_property.rs  item_collection_property.rs  item_property.rs  mod.rs  size_property.rs
quikia/src/text/: styled_text.rs  text_layout.rs
quikia/src/theme/: material_theme.rs
quikia/src/ui/: item.rs  item_event.rs  layout_params.rs  logical_x.rs  mod.rs
quikia/src/widget/: rectangle.rs
src/: main.rs  main_page.rs
