[package]
name = "quikia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
glutin = "0.31.1"
glutin-winit = "0.4.2"
winit = {version = "0.29.4",features = ["android-native-activity"]}
gl = "0.14.0"
raw-window-handle = "0.5.2"
skia-safe = {version = "0.69.0",features = ["gpu","gl","textlayout","embed-icudtl","svg"]}
env_logger = "0.10.0"
icu = "1.4.0"
reqwest = {version = "0.11.22",features = ["blocking"]}
winapi = {version = "0.3.9", features = ["winreg", "dwmapi", "windef", "winuser"] }
#macros={path = "macros"}
material_color_utilities = {path = "material_color_utilities"}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"